2008-02-04  Murray Cumming  <murrayc@murrayc.com>

	* examples/actor_events/main.c: (on_stage_button_press),
	(on_rect_button_press), (on_rect_button_release), (on_rect_motion),
	(on_rect_enter), (on_rect_leave):
	* examples/full_example/main.c: (on_texture_button_press):
	* examples/stage/main.c: (on_stage_button_press):
	* examples/stage_widget/main.c: (on_button_clicked),
	(on_stage_button_press):
	Correct the event signal handlers: They should return gboolean instead 
	of void. C is overly tolerant of my mistakes.

2008-02-02  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Using Timelines: Change the X to a /
	in the description of duration. Thanks to Ashwin Kashyap.

2008-01-30  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Remove the term 2.5D.
	Actor Basics: Change 2.5D term to 2D surfaces in 3D space.

2008-01-30  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Change mentions of GtkClutter to GtkClutterEmbed.
	* examples/stage_widget/main.c: (main): Use the new GtkClutterEmbed instead of the 
	old (removed) GtkClutter widget.
	* examples/full_example/main.c: (on_timeline_rotation_completed):
	Adapt to the new signature of the clutter_behaviour_scale_new() function.

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actor transformations: Use the correct example code.
	Thanks to Ashwin Kashyap.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Effects: Mention optional timeline cloning when using effects.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actors: Added clipping sub-section, after talking to Ebassi.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Corrected the events chain sections, now explaining the 
	capture-event signal. 

2007-12-17  Murray Cumming  <murrayc@murrayc.com>
